compiler/tests/en/errors/type_mismatch.salam
// EXPECT: E002
func main:
    x : int = "hello"
end
